RESOLVED FIXED277233
[WPE][GTK][GLIB] GPUProcessMain crashes
https://bugs.webkit.org/show_bug.cgi?id=277233
Summary [WPE][GTK][GLIB] GPUProcessMain crashes
Jani Hautakangas
Reported 2024-07-28 12:53:37 PDT
https://bugs.webkit.org/show_bug.cgi?id=275314 introduced a regressions were GPUProcessMain crashes on some environments. In this case on imx8 board. This happens because of missing return value from function bool GPUProcessMainGLib::platformInitialize
Attachments
Jani Hautakangas
Comment 1 2024-07-28 12:57:38 PDT
EWS
Comment 2 2024-07-28 23:11:44 PDT
Committed 281482@main (43d555da14f7): <https://commits.webkit.org/281482@main> Reviewed commits have been landed. Closing PR #31363 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.