[WPE][GTK][GLIB] GPUProcessMain crashes https://bugs.webkit.org/show_bug.cgi?id=277233

Reviewed by Nikolas Zimmermann and Michael Catanzaro.

https://bugs.webkit.org/show_bug.cgi?id=275314 introduced a regression were
GPUProcessMain crashes on some environments. In this case on imx8 board.
This happens because of missing return value from function
bool GPUProcessMainGLib::platformInitialize

* Source/WebKit/GPUProcess/glib/GPUProcessMainGLib.cpp:

Canonical link: https://commits.webkit.org/281482@main